--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="top_container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-        <H1>I'm Manish.</H1>
-        <p>A Developer</p>
+        <h1>I'm Manish.</h1>
+        <h2>A Developer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
