--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -14,7 +14,7 @@
     <div class="top_container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Manish.</h1>
-        <h2>A Developer</h2>
+        <h2 class="developer">A Developer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img src="images/mountain.png" alt="mountain-img">
     </div>
@@ -28,12 +28,12 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="" src="images/code.png" alt="CODING">
+            <img class="code-img" src="images/code.png" alt="CODING">
             <h3>Lorem & Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
           </div>
           <div class="skill-row">
-            <img class="" src="images/trade.png" alt="TRADING">
+            <img class="trade-img" src="images/trade.png" alt="TRADING">
             <h3>Lorem Ipsum Dolor</h3>
             <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
           </div>
@@ -52,7 +52,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2018 Name Surname.</p>
+        <p>© 2018 Manish Gaikwad.</p>
       </div>
       
 </body>
