--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -11,7 +11,7 @@
     <title>Manish</title>
 </head>
 <body>
-    <div class="top_container">
+    <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Manish.</h1>
         <h2 class="developer">A Developer</h2>
