--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -22,7 +22,7 @@
         <div class="profile">
           <img src="images/Profile_Pic.png" height="150px" width="150px" alt="Profile-Pic">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
         </div>
         <hr>
         <div class="skills">
