--- a/CSS - My Site/index.html
+++ b/CSS - My Site/index.html
@@ -50,7 +50,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p class="para-footer">© 2018 Manish Gaikwad.</p>
+        <p class="copyright">© 2021 Manish Gaikwad.</p>
       </div>
 </body>
 </html>
