--- a/Bootstrap-Installation/index.html
+++ b/Bootstrap-Installation/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <title>TinDog</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Ubuntu&display=swap" rel="stylesheet">
   
   <!-- CSS only -->
 
@@ -18,8 +20,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   <section id="title">
+    <div class="container-fluid">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">Tindog</a>
@@ -39,18 +41,19 @@
             </li>
         </ul>
     </div>
-    </nav>
+    </nav> 
     <!-- Title -->
     <div class="row">
       <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button">Download</button>
-          <button type="button">Download</button>
+          <button type="button" class="btn btn-dark">Download</button>
+          <button type="button" class="btn btn-outline-primary">Download</button>
       </div>
       <div class="col-lg-6">
           <img src="images/iphone6.png" alt="iphone-mockup">
       </div>
   </div>
+</div>
   </section>
   <!-- Features -->
   <section id="features">
