--- a/Bootstrap-Installation/index.html
+++ b/Bootstrap-Installation/index.html
@@ -3,21 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-
+  <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Ubuntu&display=swap" rel="stylesheet">
-  
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/f32e197b41.js" crossorigin="anonymous"></script>
   <!-- CSS only -->
-
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-  
   <!-- JavaScript Bundle with Popper -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-  
-  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <section id="title">
@@ -46,8 +45,8 @@
     <div class="row">
       <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark">Download</button>
-          <button type="button" class="btn btn-outline-primary">Download</button>
+          <button type="button" class="btn btn-dark btn-lg">Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg">Download</button>
       </div>
       <div class="col-lg-6">
           <img src="images/iphone6.png" alt="iphone-mockup">
