--- a/Bootstrap-Installation/index.html
+++ b/Bootstrap-Installation/index.html
@@ -56,34 +56,36 @@
   </section>
   <!-- Features -->
   <section id="features">
+   <div class="container-fluid">
     <div class="row">
       <div class="feature-box col-lg-4">
         <i class="fas fa-check-circle fa-4x icon"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature-title">Easy to use.</h3>
         <p>So easy to use, even your dog could do it.</p>
       </div>
       <div class="feature-box col-lg-4">
         <i class="fas fa-bullseye fa-4x icon"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature-title">Elite Clientele</h3>
         <p>We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="feature-box col-lg-4">
         <i class="fas fa-heart fa-4x icon"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature-title">Guaranteed to work.</h3>
         <p>Find the love of your dog's life or your money back.</p>
       </div>
+   </div>    
   </div>
   </section>
   <!-- Testimonials -->
   <section id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item active container-fluid">
           <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
+        <div class="carousel-item container-fluid">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
@@ -108,7 +110,7 @@
   </section>
   <!-- Pricing -->
   <section id="pricing">
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
       <div class="pricing-column col-lg-4 col-md-6">
@@ -158,17 +160,21 @@
   </section>
   <!-- Call to Action -->
   <section id="cta">
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
-    <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i>Download</button>
-    <button class="download-button btn btn-lg btn-light" type="button"><i class="fab fa-google-play"></i>Download</button>
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i>Download</button>
+      <button class="download-button btn btn-lg btn-light" type="button"><i class="fab fa-google-play"></i>Download</button>
+    </div>
   </section>
   <!-- Footer -->
   <footer id="footer">
-    <i class="social-icon fab fa-facebook-f"></i>
-    <i class="social-icon fab fa-twitter"></i>
-    <i class="social-icon fab fa-instagram"></i>
-    <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright 2021 TinDog</p>
+    <div class="container-fluid">
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+     <p>© Copyright 2021 TinDog</p>
+    </div> 
   </footer>
 </body>
 </html>
