--- a/Bootstrap-Installation/index.html
+++ b/Bootstrap-Installation/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -55,7 +55,7 @@
 </div>
   </section>
   <!-- Features -->
-  <section id="features">
+  <section class="white-section" id="features">
    <div class="container-fluid">
     <div class="row">
       <div class="feature-box col-lg-4">
@@ -77,7 +77,7 @@
   </div>
   </section>
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
         <div class="carousel-item active container-fluid">
@@ -109,7 +109,7 @@
     <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
   </section>
   <!-- Pricing -->
-  <section id="pricing">
+  <section class="white-section" id="pricing">
     <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
@@ -159,7 +159,7 @@
     </div>
   </section>
   <!-- Call to Action -->
-  <section id="cta">
+  <section class="colored-section" id="cta">
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
       <button class="download-button btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i>Download</button>
@@ -167,7 +167,7 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer id="footer">
+  <footer class="white-section" id="footer">
     <div class="container-fluid">
       <i class="social-icon fab fa-facebook-f"></i>
       <i class="social-icon fab fa-twitter"></i>
