--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,7 +7,7 @@
     <title>My Wesite</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="alert('Hello')">
     <h1>Hello</h1>
 </body>
 </html> 
