--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,7 +7,10 @@
     <title>My Wesite</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body onload="alert('Hello')">
+<body>
     <h1>Hello</h1>
+    <script type="text/javascript">
+    alert("Hello");
+    </script>
 </body>
-</html> 
+</html>  
